# ucx

./: GDAKI_STUB_DESIGN.md  GDAKI_STUB_SUMMARY.md
bindings/java/src/main/java/org/openucx/jucx/: Epoll.java
bindings/java/src/main/java/org/openucx/jucx/ucp/: UcpContext.java
bindings/java/src/main/native/: Makefile.am  context.cc  org_openucx_jucx_Epoll.cc
config/m4/: cuda.m4
examples/: ucp_client_server.c
examples/uct_device_hello_world/: QUICKSTART.md  README.md  build.sh  meson.build  meson.options  uct_device_hello.cu
src/ucp/core/: ucp_context.c  ucp_ep.c  ucp_mm.c  ucp_worker.c
src/ucp/stream/: stream_recv.c  stream_send.c
src/ucp/wireup/: address.c  address.h  select.c  wireup.c  wireup_cm.c
src/ucs/async/: async.c
src/ucs/config/: parser.c
src/ucs/datastruct/: callbackq.c
src/ucs/profile/: profile.c  profile_defs.h  profile_off.h  profile_on.h
src/ucs/type/: class.h
src/uct/base/: uct_iface.c  uct_md.c  uct_mem.c
src/uct/ib/base/: ib_device.c  ib_iface.c  ib_iface.h  ib_md.c
src/uct/ib/dc/: dc_mlx5.c  dc_mlx5.h  dc_mlx5_devx.c  dc_mlx5_ep.c  dc_mlx5_ep.h
src/uct/ib/mlx5/: ib_mlx5.c  ib_mlx5.h
src/uct/ib/mlx5/dv/: ib_mlx5_dv.c  ib_mlx5dv_md.c
src/uct/ib/mlx5/gdaki/: gdaki.cuh  gdaki_dev.h
src/uct/ib/rc/accel/: rc_mlx5_iface.c
src/uct/ib/rc/base/: rc_iface.c
src/uct/ib/rdmacm/: rdmacm_cm.c  rdmacm_cm_ep.c
src/uct/ib/ud/accel/: ud_mlx5.c
src/uct/ib/ud/base/: ud_ep.c  ud_iface.c
src/uct/tcp/: tcp_sockcm_ep.c
stubs/: Makefile.am
stubs/uct/ib/mlx5/gdaki/: README.md
test/apps/: test_tcmalloc
test/apps/iodemo/: gmon.out  io_demo.cc  timer.hpp  ucx_wrapper.cc  ucx_wrapper.h
tools/: mclient.sh  re_demo.sh  test_args.sh
